feat(swagger): add get user api doc & err msg
